[package]
name = "gas-used"
version = "0.1.0"
edition = "2021"
authors = ["Raul Jordan <raul@prysmaticlabs.com>"]
license = "MIT"
description = "Simple CLI tool to count the gas used by accounts interacting with a specific Ethereum contract"
readme = "README.md"
homepage = "https://github.com/rauljordan/gas-used"
repository = "https://github.com/rauljordan/gas-used"
keywords = ["cli", "ethereum", "gas"]
categories = ["command-line-utilities"]

[dependencies]
chan = "0.1.23"
clap = { version = "3.0.0-rc.11", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ethers = "0.6.2"
serde_json = "1.0"

